slow/fast added
uses basic-routine right now, needs to be at least kernal only

--- a/project-config.json
+++ b/project-config.json
@@ -1,6 +1,6 @@
 {
-    "name": "gemifer128",
-    "description": "Project gemini128",
+    "name": "gemipher128",
+    "description": "A Gopher and Gemini client for the C128-VDC",
     "toolkit": "acme",
     "sources": [
         "src/main.asm"
